...
        is FavoriteCatBreedsViewState.Loaded -> {
            if (state.catBreedItems.isEmpty()) {
                Column(
                    modifier = Modifier
                        .fillMaxWidth()
                        .fillMaxHeight()
                        .testTag("EmptyFavorites"),
                    verticalArrangement = Arrangement.Center,
                    horizontalAlignment = Alignment.CenterHorizontally
                ) {
                    Text("You have no favorites yet! Go and add some")
                }
            } else {
                CatBreedsList(
                    catBreedItems = state.catBreedItems.map { it.toListItem() },
                    onFavoriteToggle = { id, _ -> viewModel.removeFromFavorites(id) },
                    modifier = modifier,
...
