...
        modifier = modifier
            .padding(6.dp)
            .size(32.dp),
        color = Color(0x77FFFFFF)
    ) {
        IconToggleButton(
            modifier = Modifier.testTag("FavoriteToggleButton"),
            checked = isFavorite,
            onCheckedChange = {
                onToggle(it)
            }
        ) {
            Icon(
...
